--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-material-ui": "^2.1.4",
     "gatsby-plugin-offline": "3.0.1",
     "gatsby-plugin-react-helmet": "^3.1.4",
+    "gatsby-plugin-remove-trailing-slashes": "^2.1.7",
     "gatsby-plugin-sharp": "^2.2.13",
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-source-filesystem": "^2.1.19",
